add quickjs CMakeLists.txt &  update test.cc, CMakeLists.txt and README.md in the root directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(sdefl)
 add_subdirectory(zlib)
 add_subdirectory(zstd)
 add_subdirectory(minifb)
+add_subdirectory(quickjs)
 
 # Debug info
 message(STATUS "VGG_CONTRIB_JSON_INCLUDE: " ${VGG_CONTRIB_JSON_INCLUDE})
@@ -17,6 +18,7 @@ message(STATUS "VGG_CONTRIB_ZLIB_INCLUDE: " ${VGG_CONTRIB_ZLIB_INCLUDE})
 message(STATUS "VGG_CONTRIB_ZCONF_INCLUDE: " ${VGG_CONTRIB_ZCONF_INCLUDE})
 message(STATUS "VGG_CONTRIB_ZSTD_INCLUDE: " ${VGG_CONTRIB_ZSTD_INCLUDE})
 message(STATUS "VGG_CONTRIB_MINIFB_INCLUDE: " ${VGG_CONTRIB_MINIFB_INCLUDE})
+message(STATUS "VGG_CONTRIB_QUICKJS_INCLUDE: " ${VGG_CONTRIB_QUICKJS_INCLUDE})
 
 # Integration
 set(VGG_CONTRIB_INCLUDE "\
@@ -26,7 +28,8 @@ ${VGG_CONTRIB_SDEFL_INCLUDE};\
 ${VGG_CONTRIB_ZLIB_INCLUDE};\
 ${VGG_CONTRIB_ZCONF_INCLUDE};\
 ${VGG_CONTRIB_ZSTD_INCLUDE};\
-${VGG_CONTRIB_MINIFB_INCLUDE}"
+${VGG_CONTRIB_MINIFB_INCLUDE};\
+${VGG_CONTRIB_QUICKJS_INCLUDE}"
   CACHE STRING "" FORCE)
 mark_as_advanced(VGG_CONTRIB_INCLUDE)
 
@@ -44,5 +47,6 @@ target_include_directories(contrib_test PRIVATE
   ${VGG_CONTRIB_ZCONF_INCLUDE}
   ${VGG_CONTRIB_ZSTD_INCLUDE}
   ${VGG_CONTRIB_MINIFB_INCLUDE}
+  ${VGG_CONTRIB_QUICKJS_INCLUDE}
 )
-target_link_libraries(contrib_test minifb zlib libzstd_shared)
+target_link_libraries(contrib_test minifb zlib libzstd_shared quickjs)
