supported msvc compilation

--- a/quickjs/CMakeLists.txt
+++ b/quickjs/CMakeLists.txt
@@ -10,6 +10,11 @@ set(QJS_SRCS
   upstream/quickjs/libbf.c
 )
 
+if(MSVC)
+  add_compile_options(/wd"4267" /wd"4244" /wd"4018" 
+    /wd"4101" /wd"4146" /wd"4013" /wd"4334" /wd"4996")
+endif()
+
 add_library(quickjs STATIC ${QJS_SRCS})
 target_compile_options(quickjs PRIVATE
   -D_GNU_SOURCE
@@ -22,10 +27,15 @@ if (APPLE)
 target_compile_options(quickjs PRIVATE
   -Wno-incompatible-pointer-types-discards-qualifiers
 )
-else()
+elseif(NOT MSVC)
 target_compile_options(quickjs PRIVATE
-  -Wno-discarded-qualifiers
+  -Wno-discarded-qualifiers 
+  -Wno-unused-result
 )
+endif()
+
+if(MSVC)
+  target_compile_definitions(quickjs PRIVATE JS_STRICT_NAN_BOXING)
 endif()
 
 set(VGG_CONTRIB_QUICKJS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/upstream CACHE PATH "" FORCE)
