fixed zlib example build problem if system has no zlib headers

--- a/zlib/CMakeLists.txt
+++ b/zlib/CMakeLists.txt
@@ -5,6 +5,7 @@ project(vgg_contrib_zlib)
 if (APPLE)
   set(CMAKE_MACOSX_RPATH ON)
 endif()
+set(ZLIB_ENABLE_EXAMPLE OFF)
 add_subdirectory(upstream)
 
 set(VGG_CONTRIB_ZLIB_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/upstream CACHE PATH "" FORCE)
