--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(libpng)
 add_subdirectory(libjpeg-turbo)
 add_subdirectory(libwebp)
 add_subdirectory(boost)
+add_subdirectory(valijson)
 
 # Debug info
 message(STATUS "VGG_CONTRIB_JSON_INCLUDE: " ${VGG_CONTRIB_JSON_INCLUDE})
@@ -28,6 +29,7 @@ message(STATUS "VGG_CONTRIB_LIBJPG_CONF_INCLUDE: " ${VGG_CONTRIB_LIBJPG_CONF_INC
 message(STATUS "VGG_CONTRIB_LIBWEBP_INCLUDE: " ${VGG_CONTRIB_LIBWEBP_INCLUDE})
 message(STATUS "VGG_CONTRIB_LIBWEBP_CONF_INCLUDE: " ${VGG_CONTRIB_LIBWEBP_CONF_INCLUDE})
 message(STATUS "VGG_CONTRIB_BOOST_INCLUDE: " ${VGG_CONTRIB_BOOST_INCLUDE})
+message(STATUS "VGG_CONTRIB_VALIJSON_INCLUDE: " ${VGG_CONTRIB_VALIJSON_INCLUDE})
 
 # Integration
 set(VGG_CONTRIB_INCLUDE "\
@@ -45,6 +47,7 @@ ${VGG_CONTRIB_LIBJPG_CONF_INCLUDE};\
 ${VGG_CONTRIB_LIBWEBP_INCLUDE};\
 ${VGG_CONTRIB_LIBWEBP_CONF_INCLUDE};\
 ${VGG_CONTRIB_BOOST_INCLUDE};\
+${VGG_CONTRIB_VALIJSON_INCLUDE};\
 "
   CACHE STRING "" FORCE)
 mark_as_advanced(VGG_CONTRIB_INCLUDE)
@@ -70,5 +73,6 @@ target_include_directories(contrib_test PRIVATE
   ${VGG_CONTRIB_LIBWEBP_INCLUDE}
   ${VGG_CONTRIB_LIBWEBP_CONF_INCLUDE}
   ${VGG_CONTRIB_BOOST_INCLUDE}
+  ${VGG_CONTRIB_VALIJSON_INCLUDE}
 )
 target_link_libraries(contrib_test minifb zlib libzstd_shared png jpeg webp boost_locale)
