fixed zip include directory

--- a/zip/CMakeLists.txt
+++ b/zip/CMakeLists.txt
@@ -4,5 +4,5 @@ project(vgg_contrib_zip)
 
 add_subdirectory(upstream)
 
-set(VGG_CONTRIB_ZIP_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/upstream CACHE PATH "" FORCE)
+set(VGG_CONTRIB_ZIP_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/upstream/src CACHE PATH "" FORCE)
 mark_as_advanced(VGG_CONTRIB_ZIP_INCLUDE)
