1.Add information about nanobind in README.md 2.Modify the CMakelists.txt wrapper around nanobind so that find_package python is applied globally

--- a/nanobind/CMakeLists.txt
+++ b/nanobind/CMakeLists.txt
@@ -1,8 +1,9 @@
-cmake_minimum_required(VERSION 3.18...3.22)
+# 3.24 for find_package GLOBAL keyword
+cmake_minimum_required(VERSION 3.24)
 
 project(vgg_contrib_nanobind)
 
-find_package(Python 3.8 COMPONENTS Interpreter Development.Module REQUIRED)
+find_package(Python 3.8 COMPONENTS Interpreter Development.Module REQUIRED GLOBAL)
 
 add_subdirectory(upstream)
 
