--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(libwebp)
 add_subdirectory(boost)
 add_subdirectory(valijson)
 add_subdirectory(zip)
+add_subdirectory(glm)
 
 if(VGG_ADD_NANOBIND)
   add_subdirectory(nanobind)
@@ -42,6 +43,7 @@ message(STATUS "VGG_CONTRIB_BOOST_INCLUDE: " ${VGG_CONTRIB_BOOST_INCLUDE})
 message(STATUS "VGG_CONTRIB_VALIJSON_INCLUDE: " ${VGG_CONTRIB_VALIJSON_INCLUDE})
 message(STATUS "VGG_CONTRIB_ZIP_INCLUDE: " ${VGG_CONTRIB_ZIP_INCLUDE})
 message(STATUS "VGG_CONTRIB_NANOBIND_INCLUDE: " ${VGG_CONTRIB_NANOBIND_INCLUDE})
+message(STATUS "VGG_CONTRIB_GLM_INCLUDE: " ${VGG_CONTRIB_GLM_INCLUDE})
 
 # Integration
 set(VGG_CONTRIB_INCLUDE "\
@@ -62,6 +64,7 @@ ${VGG_CONTRIB_BOOST_INCLUDE};\
 ${VGG_CONTRIB_VALIJSON_INCLUDE};\
 ${VGG_CONTRIB_ZIP_INCLUDE};\
 ${VGG_CONTRIB_NANOBIND_INCLUDE};\
+${VGG_CONTRIB_GLM_INCLUDE};\
 "
   CACHE STRING "" FORCE)
 mark_as_advanced(VGG_CONTRIB_INCLUDE)
