--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.7)
 
+# MSVC runtime library flags are selected by an abstraction.
+cmake_policy(SET CMP0091 NEW)  
+
 project(vgg_contrib)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -20,6 +23,7 @@ add_subdirectory(boost)
 add_subdirectory(valijson)
 add_subdirectory(zip)
 add_subdirectory(glm)
+add_subdirectory(flexbox)
 
 if(VGG_ADD_NANOBIND)
   add_subdirectory(nanobind)
