1.Added VGG_CONTRIB_FLEXBOX_INCLUDE 2.Updated README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ message(STATUS "VGG_CONTRIB_BOOST_INCLUDE: " ${VGG_CONTRIB_BOOST_INCLUDE})
 message(STATUS "VGG_CONTRIB_VALIJSON_INCLUDE: " ${VGG_CONTRIB_VALIJSON_INCLUDE})
 message(STATUS "VGG_CONTRIB_ZIP_INCLUDE: " ${VGG_CONTRIB_ZIP_INCLUDE})
 message(STATUS "VGG_CONTRIB_GLM_INCLUDE: " ${VGG_CONTRIB_GLM_INCLUDE})
+message(STATUS "VGG_CONTRIB_FLEXBOX_INCLUDE: " ${VGG_CONTRIB_FLEXBOX_INCLUDE})
 
 # Integration
 set(VGG_CONTRIB_INCLUDE "\
@@ -67,6 +68,7 @@ ${VGG_CONTRIB_BOOST_INCLUDE};\
 ${VGG_CONTRIB_VALIJSON_INCLUDE};\
 ${VGG_CONTRIB_ZIP_INCLUDE};\
 ${VGG_CONTRIB_GLM_INCLUDE};\
+${VGG_CONTRIB_FLEXBOX_INCLUDE};\
 "
   CACHE STRING "" FORCE)
 mark_as_advanced(VGG_CONTRIB_INCLUDE)
