--- a/yoga/CMakeLists.txt
+++ b/yoga/CMakeLists.txt
@@ -4,3 +4,6 @@ cmake_minimum_required(VERSION 3.0.0)
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
 add_subdirectory(upstream)
+
+set(VGG_CONTRIB_YOGA_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/upstream CACHE PATH "" FORCE)
+mark_as_advanced(VGG_CONTRIB_YOGA_INCLUDE)
