--- a/nanobind/CMakeLists.txt
+++ b/nanobind/CMakeLists.txt
@@ -6,3 +6,6 @@ project(vgg_contrib_nanobind)
 find_package(Python 3.8 COMPONENTS Interpreter Development.Module REQUIRED GLOBAL)
 
 add_subdirectory(upstream)
+
+set(VGG_CONTRIB_NANOBIND_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/upstream/include CACHE PATH "" FORCE)
+mark_as_advanced(VGG_CONTRIB_NANOBIND_INCLUDE)
