--- a/libpng/CMakeLists.txt
+++ b/libpng/CMakeLists.txt
@@ -10,7 +10,14 @@ if (NOT VGG_CONTRIB_ZLIB_INCLUDE)
 endif()
 set(ZLIB_INCLUDE_DIR ${VGG_CONTRIB_ZLIB_INCLUDE} ${VGG_CONTRIB_ZLIB_CONF_INCLUDE}) # for upstream/scripts/genout.cmake.in
 set(ZLIB_INCLUDE_DIRS ${VGG_CONTRIB_ZLIB_INCLUDE} ${VGG_CONTRIB_ZLIB_CONF_INCLUDE})
-set(ZLIB_LIBRARIES $<BUILD_INTERFACE:zlib>)
+
+option(LIB_PNG_USE_STATIC_ZLIB OFF)
+if(LIB_PNG_USE_STATIC_ZLIB)
+  set(ZLIB_LIBRARIES $<BUILD_INTERFACE:zlibstatic>)  
+else()
+  set(ZLIB_LIBRARIES $<BUILD_INTERFACE:zlib>)  
+endif()
+
 add_subdirectory(upstream)
 
 set(VGG_CONTRIB_LIBPNG_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/upstream/ CACHE PATH "" FORCE)
